<resources>
    <string name="app_name">小小一棵树</string>

    <!--Login-->
    <string name="et_user">校园卡号</string>
    <string name="et_password">教务系统登陆密码</string>
    <string name="bt_sign_in">登    录</string>
    <string name="et_Captcha">验证码</string>

    <string name="title_activity_main">兰州大学</string>
    <string name="title_activity_login">教务系统登陆</string>

    <string name="lesson">学期课程</string>
    <string name="score">成绩查询</string>
    <string name="exam">考试安排</string>
    <string name="secret">密码修改</string>
    <string name="calculate">不确定度</string>

    <string name="communicate">其他</string>
    <string name="share">分享一下</string>
    <string name="send">联系我吗</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_lession">课程表</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="time">2018</string>
    <string name="mon">周一</string>
    <string name="tue">周二</string>
    <string name="wen">周三</string>
    <string name="thu">周四</string>
    <string name="fri">周五</string>
    <string name="sat">周六</string>
    <string name="sun">周日</string>
    <string name="appwidget_text">开发中……</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="week_1">第1周</string>
    <string name="week_2">第2周</string>
    <string name="week_3">第3周</string>
    <string name="week_4">第4周</string>
    <string name="week_5">第5周</string>
    <string name="week_6">第6周</string>
    <string name="week_7">第7周</string>
    <string name="week_8">第8周</string>
    <string name="week_9">第9周</string>
    <string name="week_10">第10周</string>
    <string name="week_11">第11周</string>
    <string name="week_12">第12周</string>
    <string name="week_13">第13周</string>
    <string name="week_14">第14周</string>
    <string name="week_15">第15周</string>
    <string name="week_16">第16周</string>
    <string name="week_17">第17周</string>
    <string name="week_18">第18周</string>
    <string name="title_activity_lesson">Lesson</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_lesson2">Lesson2</string>
    <string name="calculate_num">2.037+2.141+2.210+2.105+2.249</string>
    <string name="TExperimentalData">实验数据(以“+”分开各组实验数据）</string>
    <string name="TMinimumScaleValue">测量工具最小刻度（注意单位与实验数据一致）：</string>
    <string name="title_activity_calculator">不确定度的计算（兰大教材）</string>
    <string name="calculate_results">计算结果</string>
    <string name="bt_calculate">直接进入计算器</string>
    <string name="bt_time_table">直接进入课程表</string>
    <string name="TVUncertaintyResult">计算结果：</string>
    <string name="calculate_about">计算说明</string>
    <string name="change_password_info">说明</string>
    <string name="title_activity_settings">Settings</string>


    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="notice0">教学运行公告</string>
    <string name="_2014_2">2014年秋</string>
    <string name="_2015_1">2015年春</string>
    <string name="_2015_2">2015年秋</string>
    <string name="_2016_1">2016年春</string>
    <string name="_2016_2">2016年秋</string>
    <string name="_2017_1">2017年春</string>
    <string name="_2017_2">2017年秋</string>
    <string name="all">全部学年</string>
    <string name="login_1">登陆</string>
    <string name="about">关于</string>
    <string name="about_main">关于</string>
    <string name="_right"><![CDATA[>]]></string>
    <string name="_now_">o</string>
    <string name="_left_"><![CDATA[<]]></string>
    <string name="title_activity_about">关于</string>
    <string name="change_table">切换课表</string>


</resources>
