<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lesson"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/lesson" />
        <item
            android:id="@+id/nav_exam"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/exam" />
        <item
            android:id="@+id/nav_score"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/score" />
        <item
            android:id="@+id/nav_secret"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/secret" />
        <item
            android:id="@+id/nav_calculate"
            android:icon="@drawable/calculator"
            android:title="@string/calculate" />
    </group>

    <item android:title="@string/communicate">
        <menu>

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />

        </menu>

    </item>

</menu>
