<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.zrs.yuh.rs.LoginActivity">

    <LinearLayout
        android:layout_marginLeft="120dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_lzu"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:background="@drawable/lzu" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_user"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_Captcha"
            android:hint="@string/et_Captcha"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true"/>


        <ImageView
            android:id="@+id/iv_Captcha"
            android:layout_width="150dp"
            android:layout_height="40dp" />

    </LinearLayout>


    <Button
        android:id="@+id/bt_sign_in"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/course_info_2"
        android:elevation="4dp"
        android:text="@string/bt_sign_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

    <Button
        android:id="@+id/bt_time_table"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@drawable/course_info_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:elevation="4dp"
        android:text="@string/bt_time_table"
        android:textSize="18sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/bt_calculate"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@drawable/course_info_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:elevation="4dp"
        android:text="@string/bt_calculate"
        android:textSize="18sp"
        android:textStyle="bold" />



</LinearLayout>
