<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.zrs.yuh.rs.timetable.Lesson2LoadActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_user_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_user"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_password_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_Captcha_2"
            android:hint="@string/et_Captcha"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true"/>

        <ImageView
            android:id="@+id/iv_Captcha_2"
            android:layout_width="200dp"
            android:layout_height="50dp" />

    </LinearLayout>


</LinearLayout>
