<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.zrs.yuh.rs.MainActivity"
    tools:showIn="@layout/app_bar_main">


<LinearLayout
    android:id="@+id/tv_linear"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_today_table0"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:text="今日课程"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_today_table_before"
        android:paddingStart="30dp"
        android:paddingEnd="10dp"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:text="@string/_left_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_today_table_now"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/_now_"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_today_table_late"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/_right"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />




</LinearLayout>


    <ScrollView
        android:id="@+id/table"
        android:layout_below="@id/tv_linear"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="195dp">

        <TableLayout

            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/today_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

        </TableLayout>
    </ScrollView>
<LinearLayout
    android:id="@+id/linear_notice"
    android:layout_below="@id/table"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_notice0"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:text="@string/notice0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>


    <ScrollView
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:layout_below="@id/linear_notice"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/tv_notice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="暂无" />

    </ScrollView>




</RelativeLayout>
